--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "docker-stop": "docker stop personopplysninger",
     "start": "npm-run-all -p start:*",
     "start:less": "less-watch-compiler",
-    "start:lint": "tslint src/**/*.ts*",
     "start:ts": "react-scripts start",
+    "lint": "eslint src/**/*.ts*",
     "build": "npm-run-all -p build:*",
     "build:js": "react-scripts build",
     "build:css": "less-watch-compiler --run-once",
@@ -78,12 +78,18 @@
     "@types/react-router-dom": "5.3.3",
     "@types/react-select": "5.0.1",
     "@types/react-test-renderer": "18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
     "classnames": "2.3.2",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
     "jest-fetch-mock": "3.0.3",
     "less": "4.1.3",
     "less-plugin-npm-import": "2.1.0",
     "less-watch-compiler": "1.16.3",
-    "prettier": "2.8.3",
+    "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
     "source-map-explorer": "2.5.3",
     "tslint": "6.1.3",
