--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
+    "husky": "^8.0.3",
     "jest-fetch-mock": "3.0.3",
     "less": "4.1.3",
     "less-plugin-npm-import": "2.1.0",
