--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,21 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true
-  },
-  "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:@typescript-eslint/recommended", "plugin:jsx-a11y/recommended", "prettier"],
-  "overrides": [],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "plugins": ["react", "@typescript-eslint"],
-  "rules": {
-    "linebreak-style": ["error", "unix"],
-    "quotes": ["error", "double"],
-    "semi": ["error", "always"],
-    "max-len": [1, { "code": 150, "ignoreComments": true, "ignoreStrings": true }],
-    "indent": "off"
-  }
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
+    "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:@typescript-eslint/recommended", "plugin:jsx-a11y/recommended", "prettier"],
+    "overrides": [],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "plugins": ["react", "@typescript-eslint"],
+    "rules": {
+        "linebreak-style": ["warn", "unix"],
+        "quotes": ["warn", "single", { "avoidEscape": true }],
+        "semi": ["error", "always"],
+        "max-len": [1, { "code": 150, "ignoreComments": true, "ignoreStrings": true }],
+        "indent": "off"
+    }
 }
