--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "trailingComma": "es5",
-  "tabWidth": 2,
+  "tabWidth": 4,
   "semi": true,
-  "singleQuote": false,
+  "singleQuote": true,
   "printWidth": 150
 }
