--- a/.github/workflows/deploy.dev.yml
+++ b/.github/workflows/deploy.dev.yml
@@ -38,7 +38,7 @@ jobs:
           echo "REACT_APP_API_URL=https://www.intern.dev.nav.no/person/personopplysninger-api" >> $GITHUB_ENV
           echo "REACT_APP_DSOP_URL=https://www.intern.dev.nav.no/person/dsop-api" >> $GITHUB_ENV
           echo "REACT_APP_TJENESTER_URL=https://tjenester-q1.nav.no" >> $GITHUB_ENV
-          echo "REACT_APP_LOGIN_URL=https://loginservice.intern.dev.nav.no/login" >> $GITHUB_ENV
+          echo "REACT_APP_LOGIN_URL=https://login.ekstern.dev.nav.no/oauth2/login" >> $GITHUB_ENV
           echo "REACT_APP_DITT_NAV_URL=https://www.intern.dev.nav.no/minside" >> $GITHUB_ENV
           echo "REACT_APP_PENSJONSOPPTJENING_URL=https://www-q0.nav.no/pensjon/opptjening" >> $GITHUB_ENV
           echo "REACT_APP_INNLOGGINGSSTATUS_URL=https://www.ekstern.dev.nav.no/person/nav-dekoratoren-api/auth" >> $GITHUB_ENV
