--- a/package.json
+++ b/package.json
@@ -91,9 +91,7 @@
         "less-watch-compiler": "1.16.3",
         "prettier": "2.8.8",
         "react-test-renderer": "18.2.0",
-        "source-map-explorer": "2.5.3",
-        "tslint": "6.1.3",
-        "tslint-react": "5.0.0"
+        "source-map-explorer": "2.5.3"
     },
     "resolutions": {},
     "browserslist": {
