--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
         "@testing-library/jest-dom": "5.16.5",
         "@testing-library/react": "13.4.0",
         "@testing-library/user-event": "^14.4.3",
+        "@typescript-eslint/eslint-plugin": "^5.59.5",
+        "@typescript-eslint/parser": "^5.59.5",
         "@types/fetch-mock": "7.3.5",
         "@types/file-saver": "2.0.5",
         "@types/jest": "29.4.0",
@@ -79,11 +81,15 @@
         "@types/react-select": "5.0.1",
         "@types/react-test-renderer": "18.0.0",
         "classnames": "2.3.2",
+        "eslint": "^8.40.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-jsx-a11y": "^6.7.1",
+        "eslint-plugin-react": "^7.32.2",
         "jest-fetch-mock": "3.0.3",
         "less": "4.1.3",
         "less-plugin-npm-import": "2.1.0",
         "less-watch-compiler": "1.16.3",
-        "prettier": "2.8.3",
+        "prettier": "2.8.8",
         "react-test-renderer": "18.2.0",
         "source-map-explorer": "2.5.3"
     },
