--- a/package.json
+++ b/package.json
@@ -27,19 +27,19 @@
         "analyze": "source-map-explorer 'build/static/js/*.js'"
     },
     "dependencies": {
-        "@navikt/arbeidsforhold": "3.2.5",
-        "@navikt/ds-css": "2.9.8",
-        "@navikt/ds-icons": "2.9.8",
-        "@navikt/ds-react": "2.9.8",
+        "@navikt/arbeidsforhold": "3.2.5-beta.0",
+        "@navikt/ds-css": "4.1.2",
+        "@navikt/ds-icons": "3.4.3",
+        "@navikt/ds-react": "4.1.3",
         "@navikt/fnrvalidator": "1.3.0",
-        "@navikt/nav-dekoratoren-moduler": "2.0",
+        "@navikt/nav-dekoratoren-moduler": "2.0.1",
         "@react-pdf/renderer": "3.1.9",
         "buffer": "6.0.3",
         "core-js": "3.27.2",
         "dayjs": "1.11.7",
         "fetch-mock": "9.11.0",
         "file-saver": "2.0.5",
-        "ibantools": "4.2.2",
+        "ibantools": "4.3.3",
         "intl": "1.2.5",
         "jsdom": "20.0.0",
         "lodash.throttle": "4.1.1",
@@ -47,44 +47,44 @@
         "node-fetch": "3.3.0",
         "npm-run-all": "4.1.5",
         "prop-types": "15.8.1",
-        "react": "^18.2.0",
+        "react": "18.2.0",
         "react-collapse": "5.1.1",
-        "react-day-picker": "8.5.1",
+        "react-day-picker": "8.7.1",
         "react-dom": "18.2.0",
-        "react-hook-form": "7.43.0",
-        "react-intl": "6.2.8",
+        "react-hook-form": "7.44.3",
+        "react-intl": "6.4.3",
         "react-modal": "3.16.1",
-        "react-router-dom": "6.8.1",
+        "react-router-dom": "6.12.1",
         "react-scripts": "5.0.1",
-        "react-select": "5.7.0",
+        "react-select": "5.7.3",
         "ssri": "9.0.1",
         "typescript": "4.9.5"
     },
     "devDependencies": {
-        "@testing-library/dom": "^8.20.0",
+        "@testing-library/dom": "8.20.0",
         "@testing-library/jest-dom": "5.16.5",
         "@testing-library/react": "13.4.0",
-        "@testing-library/user-event": "^14.4.3",
-        "@typescript-eslint/eslint-plugin": "^5.59.5",
-        "@typescript-eslint/parser": "^5.59.5",
+        "@testing-library/user-event": "14.4.3",
         "@types/fetch-mock": "7.3.5",
         "@types/file-saver": "2.0.5",
-        "@types/jest": "29.4.0",
-        "@types/js-cookie": "3.0.2",
+        "@types/jest": "29.5.2",
+        "@types/js-cookie": "3.0.3",
         "@types/jsdom": "21.1.0",
         "@types/node": "18.13.0",
         "@types/node-fetch": "2.6.2",
-        "@types/react": "18.0.10",
-        "@types/react-dom": "18.0.10",
+        "@types/react": "18.2.9",
+        "@types/react-dom": "18.2.4",
         "@types/react-modal": "3.13.1",
         "@types/react-router-dom": "5.3.3",
         "@types/react-select": "5.0.1",
         "@types/react-test-renderer": "18.0.0",
+        "@typescript-eslint/eslint-plugin": "^5.59.5",
+        "@typescript-eslint/parser": "^5.59.5",
         "classnames": "2.3.2",
-        "eslint": "^8.40.0",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-jsx-a11y": "^6.7.1",
-        "eslint-plugin-react": "^7.32.2",
+        "eslint": "8.42.0",
+        "eslint-config-prettier": "8.8.0",
+        "eslint-plugin-jsx-a11y": "6.7.1",
+        "eslint-plugin-react": "7.32.2",
         "jest-fetch-mock": "3.0.3",
         "less": "4.1.3",
         "less-plugin-npm-import": "2.1.0",
