Legger til faro pakker og rigger opp init

--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,4 @@ REACT_APP_TJENESTER_URL=https://tjenester.nav.no
 REACT_APP_LOGIN_URL=https://loginservice-q.nav.no/login
 REACT_APP_INNLOGGINGSSTATUS_URL=http://localhost:8095/innloggingsstatus/auth
 REACT_APP_DITT_NAV_URL=https://www.nav.no/minside
+REACT_APP_TELEMETRY_URL=http://localhost:12347/collect
