--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "analyze": "source-map-explorer 'build/static/js/*.js'"
     },
     "dependencies": {
+        "@grafana/faro-web-sdk": "^1.1.2",
+        "@grafana/faro-web-tracing": "^1.1.2",
         "@navikt/arbeidsforhold": "3.2.6",
         "@navikt/ds-css": "4.1.2",
         "@navikt/ds-icons": "3.4.3",
