--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -35,6 +35,7 @@ jobs:
       - name: Define client-side environment
         run: |
           echo "REACT_APP_MILJO=PROD" >> $GITHUB_ENV
+          echo "REACT_APP_VERSION=${{ github.event.release.tag_name }}" >> $GITHUB_ENV
           echo "REACT_APP_DINE_SAKER_URL=https://person.nav.no/mine-saker" >> $GITHUB_ENV
           echo "REACT_APP_PDL_URL=https://www.nav.no/person/pdl-fullmakt-ui" >> $GITHUB_ENV
           echo "REACT_APP_SKJERMING_URL=https://www.nav.no/person/personopplysninger/skjerming" >> $GITHUB_ENV
