--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
         "analyze": "source-map-explorer 'build/static/js/*.js'"
     },
     "dependencies": {
+        "@navikt/aksel-icons": "^4.7.2",
         "@navikt/arbeidsforhold": "3.2.7",
-        "@navikt/ds-css": "4.1.2",
-        "@navikt/ds-icons": "3.4.3",
-        "@navikt/ds-react": "4.1.3",
+        "@navikt/ds-css": "4.7.2",
+        "@navikt/ds-react": "4.7.2",
         "@navikt/fnrvalidator": "1.3.0",
         "@navikt/nav-dekoratoren-moduler": "2.0.1",
         "@react-pdf/renderer": "3.1.9",
