--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
         "analyze": "source-map-explorer 'build/static/js/*.js'"
     },
     "dependencies": {
-        "@navikt/aksel-icons": "^4.7.2",
-        "@navikt/arbeidsforhold": "3.2.7",
+        "@navikt/aksel-icons": "4.7.2",
+        "@navikt/arbeidsforhold": "3.2.8-beta.0",
         "@navikt/ds-css": "4.7.2",
         "@navikt/ds-react": "4.7.2",
         "@navikt/fnrvalidator": "1.3.0",
