--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     },
     "dependencies": {
         "@navikt/aksel-icons": "4.7.2",
-        "@navikt/arbeidsforhold": "3.2.8-beta.0",
+        "@navikt/arbeidsforhold": "3.2.8",
         "@navikt/ds-css": "4.7.2",
         "@navikt/ds-react": "4.7.2",
         "@navikt/fnrvalidator": "1.3.0",
