Oppdaterer til beta av dekoratøren for å teste utloggingsvarsel

--- a/.nais/config.yaml
+++ b/.nais/config.yaml
@@ -20,6 +20,11 @@ spec:
   readiness:
     path: /person/personopplysninger/internal/isReady
     initialDelay: 10
+  idporten:
+    enabled: true
+    sidecar:
+      enabled: true
+      autoLogin: false
   accessPolicy:
     outbound:
       external:
