--- a/package.json
+++ b/package.json
@@ -59,8 +59,7 @@
         "react-router-dom": "6.16.0",
         "react-scripts": "5.0.1",
         "react-select": "5.7.7",
-        "ssri": "9.0.1",
-        "typescript": "4.9.5"
+        "ssri": "9.0.1"
     },
     "devDependencies": {
         "@testing-library/dom": "8.20.1",
@@ -93,7 +92,8 @@
         "less-watch-compiler": "1.16.3",
         "prettier": "2.8.8",
         "react-test-renderer": "18.2.0",
-        "source-map-explorer": "2.5.3"
+        "source-map-explorer": "2.5.3",
+        "typescript": "5.3.3"
     },
     "resolutions": {},
     "browserslist": {
