--- a/server/package.json
+++ b/server/package.json
@@ -8,17 +8,17 @@
         "start": "node server.js"
     },
     "dependencies": {
-        "@navikt/nav-dekoratoren-moduler": "^1.6.9",
+        "@navikt/nav-dekoratoren-moduler": "2.1.5",
         "compression": "1.7.4",
-        "dotenv": "^16.0.2",
-        "express": "^4.18.1",
-        "html-react-parser": "^3.0.4",
-        "jsdom": "^20.0.0",
-        "mustache-express": "^1.3.2",
-        "node-cache": "^5.1.2",
-        "node-fetch": "^3.2.10",
-        "react": "^17.0.2",
-        "winston": "^3.8.2"
+        "dotenv": "16.3.1",
+        "express": "4.18.1",
+        "html-react-parser": "5.0.10",
+        "jsdom": "20.0.0",
+        "mustache-express": "1.3.2",
+        "node-cache": "5.1.2",
+        "node-fetch": "3.3.2",
+        "react": "18.2.0",
+        "winston": "3.11.0"
     },
     "browserslist": [
         ">0.2%",
