Endrer install av serverdeps fordi github registry auth

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "author": "NAV",
     "license": "MIT",
     "homepage": "/person/personopplysninger/",
+    "workspaces": [
+        "server"
+    ],
     "jest": {
         "resetMocks": false
     },
