--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@navikt/ds-react": "5.15.0",
         "@navikt/fnrvalidator": "1.3.3",
         "@navikt/nav-dekoratoren-moduler": "2.1.5",
+        "@navikt/nav-office-reception-info": "0.2.1",
         "@react-pdf/renderer": "3.1.17",
         "buffer": "6.0.3",
         "core-js": "3.35.0",
