--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 ENV=prod
-REACT_APP_MILJO=LOCAL
+REACT_APP_MILJO=local
 REACT_APP_VERSION=local
 REACT_APP_URL=http://localhost:3000/person/personopplysninger
 REACT_APP_DINE_SAKER_URL=https://person.nav.no/mine-saker
