--- a/.github/workflows/deploy.dev.yml
+++ b/.github/workflows/deploy.dev.yml
@@ -1,85 +1,31 @@
-name: Deploy-to-dev
-on: workflow_dispatch
+name: Deploy to dev
+on:
+  workflow_dispatch
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
+  build:
+    uses: ./.github/workflows/build-and-deploy.yml
     permissions:
       contents: "read"
       id-token: "write"
       packages: "write"
-    steps:
-      - uses: actions/checkout@v4
-      - name: Setup node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "20"
-          registry-url: "https://npm.pkg.github.com"
-          cache: "npm"
-      - name: Define build environment
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          IMAGE_VERSION_RAW=$(echo ${GITHUB_WORKFLOW})-$(echo ${GITHUB_SHA})
-          echo "CI=true" >> $GITHUB_ENV
-          echo "IMAGE_REGISTRY=ghcr.io/$(echo ${GITHUB_REPOSITORY})" >> $GITHUB_ENV
-          echo "IMAGE_NAME=$(echo ${GITHUB_REPOSITORY##*/})" >> $GITHUB_ENV
-          echo "IMAGE_VERSION=${IMAGE_VERSION_RAW,,}" >> $GITHUB_ENV
-          echo "GITHUB_TOKEN=$(echo ${GITHUB_TOKEN})" >> $GITHUB_ENV
-          echo "PUBLIC_URL=https://cdn.nav.no/personbruker/personopplysninger/$(echo ${IMAGE_VERSION_RAW,,})/build" >> $GITHUB_ENV
-      - name: Define client-side environment
-        run: |
-          echo "REACT_APP_MILJO=DEV" >> $GITHUB_ENV
-          echo "REACT_APP_VERSION=dev-${{ github.sha }}" >> $GITHUB_ENV
-          echo "REACT_APP_DINE_SAKER_URL=https://www.intern.dev.nav.no/mine-saker" >> $GITHUB_ENV
-          echo "REACT_APP_PDL_URL=https://www.intern.dev.nav.no/person/pdl-fullmakt-ui" >> $GITHUB_ENV
-          echo "REACT_APP_SKJERMING_URL=https://www.intern.dev.nav.no/person/personopplysninger/skjerming" >> $GITHUB_ENV
-          echo "REACT_APP_URL=https://www.intern.dev.nav.no/person/personopplysninger" >> $GITHUB_ENV
-          echo "REACT_APP_API_URL=https://www.intern.dev.nav.no/person/personopplysninger-api" >> $GITHUB_ENV
-          echo "REACT_APP_DSOP_URL=https://www.intern.dev.nav.no/person/dsop-api" >> $GITHUB_ENV
-          echo "REACT_APP_TJENESTER_URL=https://tjenester-q1.nav.no" >> $GITHUB_ENV
-          echo "REACT_APP_LOGIN_URL=https://login.ekstern.dev.nav.no/oauth2/login" >> $GITHUB_ENV
-          echo "REACT_APP_DITT_NAV_URL=https://www.intern.dev.nav.no/minside" >> $GITHUB_ENV
-          echo "REACT_APP_PENSJONSOPPTJENING_URL=https://www-q0.nav.no/pensjon/opptjening" >> $GITHUB_ENV
-          echo "REACT_APP_INNLOGGINGSSTATUS_URL=https://www.ekstern.dev.nav.no/person/nav-dekoratoren-api/auth" >> $GITHUB_ENV
-          echo "REACT_APP_TELEMETRY_URL=https://telemetry.ekstern.dev.nav.no/collect" >> $GITHUB_ENV
-      - run: npm ci
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
-      - run: npm test
-      - run: npm run build
-      - name: Docker build and push
-        run: |
-          echo $GITHUB_TOKEN | docker login $IMAGE_REGISTRY -u ${GITHUB_REPOSITORY} --password-stdin
-          docker build -t $IMAGE_REGISTRY/$IMAGE_NAME:$IMAGE_VERSION .
-          docker push $IMAGE_REGISTRY/$IMAGE_NAME:$IMAGE_VERSION
-      - id: upload
-        uses: navikt/frontend/actions/cdn-upload/v1@main
-        with:
-          cdn-team-name: personbruker
-          source: ./build
-          destination: personopplysninger/${{ env.IMAGE_VERSION }}
-      - run: echo uploaded file ${{ steps.upload.outputs.uploaded }}
-        shell: bash
-      - name: Generate nais variables
-        run: |
-          cat > .nais/vars.yaml <<EOF
-          ingresses:
-            - https://www.intern.dev.nav.no/person/personopplysninger
-          externalHosts:
-            - www.intern.dev.nav.no
-            - www.ekstern.dev.nav.no
-            - dekoratoren.ekstern.dev.nav.no
-          image: $IMAGE_REGISTRY/$IMAGE_NAME
-          version: $IMAGE_VERSION
-          env: dev
-          cpuReq: 50m
-          replicas:
-            min: 1
-            max: 2
-          EOF
-      - uses: nais/deploy/actions/deploy@v2
-        env:
-          CLUSTER: dev-gcp
-          RESOURCE: .nais/config.yaml
-          VARS: .nais/vars.yaml
+    with:
+      env: dev
+      imageSuffix: dev-deploy
+      appOrigin: "https://www.intern.dev.nav.no"
+      REACT_APP_VERSION: "dev-${{ github.sha }}"
+      REACT_APP_DINE_SAKER_URL: "https://www.intern.dev.nav.no/mine-saker"
+      REACT_APP_PDL_URL: "https://www.intern.dev.nav.no/person/pdl-fullmakt-ui"
+      REACT_APP_SKJERMING_URL: "https://www.intern.dev.nav.no/person/personopplysninger/skjerming"
+      REACT_APP_URL: "https://www.intern.dev.nav.no/person/personopplysninger"
+      REACT_APP_API_URL: "https://www.intern.dev.nav.no/person/personopplysninger-api"
+      REACT_APP_DSOP_URL: "https://www.intern.dev.nav.no/person/dsop-api"
+      REACT_APP_TJENESTER_URL: "https://tjenester-q1.nav.no"
+      REACT_APP_LOGIN_URL: "https://login.ekstern.dev.nav.no/oauth2/login"
+      REACT_APP_DITT_NAV_URL: "https://www.intern.dev.nav.no/minside"
+      REACT_APP_PENSJONSOPPTJENING_URL: "https://www-q0.nav.no/pensjon/opptjening"
+      REACT_APP_INNLOGGINGSSTATUS_URL: "https://www.ekstern.dev.nav.no/person/nav-dekoratoren-api/auth"
+      REACT_APP_TELEMETRY_URL: "https://telemetry.ekstern.dev.nav.no/collect"
+    secrets:
+      READER_TOKEN: ${{ secrets.READER_TOKEN }}
+      NAIS_WORKLOAD_IDENTITY_PROVIDER: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
