--- a/.nais/vars-prod.yml
+++ b/.nais/vars-prod.yml
@@ -3,10 +3,12 @@ ingresses:
 externalHosts:
   - www.nav.no
   - nav.no
-image: $IMAGE_REGISTRY/$IMAGE_NAME
-version: $IMAGE_VERSION
-env: prod
-cpuReq: 200m
 replicas:
   min: 2
   max: 4
+resources:
+  limits:
+    memory: 1024Mi
+  requests:
+    cpu: 200m
+    memory: 256Mi
