--- a/.nais/vars-dev.yml
+++ b/.nais/vars-dev.yml
@@ -4,10 +4,12 @@ externalHosts:
     - www.intern.dev.nav.no
     - www.ekstern.dev.nav.no
     - dekoratoren.ekstern.dev.nav.no
-image: $IMAGE_REGISTRY/$IMAGE_NAME
-version: $IMAGE_VERSION
-env: dev
-cpuReq: 50m
 replicas:
-    min: 1
-    max: 2
+  min: 1
+  max: 2
+resources:
+  limits:
+    memory: 1024Mi
+  requests:
+    cpu: 50m
+    memory: 128Mi
