--- a/.env.sample
+++ b/.env.sample
@@ -7,7 +7,8 @@ REACT_APP_PDL_URL=https://www.nav.no/person/pdl-fullmakt-ui
 REACT_APP_SKJERMING_URL=https://www.nav.no/person/personopplysninger/skjerming
 REACT_APP_API_URL=http://localhost:8080/person/personopplysninger-api
 REACT_APP_DSOP_URL=http://localhost:8081/person/dsop-api
-REACT_APP_TJENESTER_URL=https://tjenester.nav.no
+REACT_APP_UTBETALINGSOVERSIKT_URL=https://www.intern.dev.nav.no/utbetalingsoversikt
+REACT_APP_SYKEFRAVAER_URL=https://www.ekstern.dev.nav.no/syk/sykefravaer
 REACT_APP_LOGIN_URL=https://loginservice-q.nav.no/login
 REACT_APP_INNLOGGINGSSTATUS_URL=http://localhost:8095/innloggingsstatus/auth
 REACT_APP_DITT_NAV_URL=https://www.nav.no/minside
