--- a/.github/workflows/deploy.dev.yml
+++ b/.github/workflows/deploy.dev.yml
@@ -20,7 +20,8 @@ jobs:
       REACT_APP_URL: "https://www.intern.dev.nav.no/person/personopplysninger"
       REACT_APP_API_URL: "https://www.intern.dev.nav.no/person/personopplysninger-api"
       REACT_APP_DSOP_URL: "https://www.intern.dev.nav.no/person/dsop-api"
-      REACT_APP_TJENESTER_URL: "https://tjenester-q1.nav.no"
+      REACT_APP_UTBETALINGSOVERSIKT_URL: "https://www.intern.dev.nav.no/utbetalingsoversikt/"
+      REACT_APP_SYKEFRAVAER_URL: "https://www.ekstern.dev.nav.no/syk/sykefravaer"
       REACT_APP_LOGIN_URL: "https://login.ekstern.dev.nav.no/oauth2/login"
       REACT_APP_DITT_NAV_URL: "https://www.intern.dev.nav.no/minside"
       REACT_APP_PENSJONSOPPTJENING_URL: "https://www-q0.nav.no/pensjon/opptjening"
