--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -22,7 +22,8 @@ jobs:
       REACT_APP_URL: "https://www.nav.no/person/personopplysninger"
       REACT_APP_API_URL: "https://www.nav.no/person/personopplysninger-api"
       REACT_APP_DSOP_URL: "https://www.nav.no/person/dsop-api"
-      REACT_APP_TJENESTER_URL: "https://tjenester.nav.no"
+      REACT_APP_UTBETALINGSOVERSIKT_URL: "https://tjenester.nav.no/utbetalingsoversikt"
+      REACT_APP_SYKEFRAVAER_URL: "https://www.nav.no/syk/sykefravaer"
       REACT_APP_LOGIN_URL: "https://login.nav.no/oauth2/login"
       REACT_APP_DITT_NAV_URL: "https://www.nav.no/minside"
       REACT_APP_PENSJONSOPPTJENING_URL: "https://www.nav.no/pensjon/opptjening"
