Setter spesifikke URL for sykefravær og utbetalingsoversikt

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -99,6 +99,8 @@ jobs:
           echo "REACT_APP_DSOP_URL=${{ inputs.REACT_APP_DSOP_URL }}" >> $GITHUB_ENV
           echo "REACT_APP_LOGIN_URL=${{ inputs.REACT_APP_LOGIN_URL }}" >> $GITHUB_ENV
           echo "REACT_APP_DITT_NAV_URL=${{ inputs.REACT_APP_DITT_NAV_URL }}" >> $GITHUB_ENV
+          echo "REACT_APP_UTBETALINGSOVERSIKT_URL=${{ inputs.REACT_APP_UTBETALINGSOVERSIKT_URL }}" >> $GITHUB_ENV
+          echo "REACT_APP_SYKEFRAVAER_URL=${{ inputs.REACT_APP_SYKEFRAVAER_URL }}" >> $GITHUB_ENV
           echo "REACT_APP_PENSJONSOPPTJENING_URL=${{ inputs.REACT_APP_PENSJONSOPPTJENING_URL }}" >> $GITHUB_ENV
           echo "REACT_APP_INNLOGGINGSSTATUS_URL=${{ inputs.REACT_APP_INNLOGGINGSSTATUS_URL }}" >> $GITHUB_ENV
           echo "REACT_APP_TELEMETRY_URL=${{ inputs.REACT_APP_TELEMETRY_URL }}" >> $GITHUB_ENV
