--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -114,11 +114,13 @@ jobs:
         run: npm run build
       - name: Upload assets to CDN
         id: upload
-        uses: navikt/frontend/actions/cdn-upload/v1@main
+        uses: nais/deploy/actions/cdn-upload/v2@master
         with:
-          cdn-team-name: personbruker
+          team: personbruker
           source: ./build
           destination: personopplysninger/${{ env.IMAGE_VERSION }}
+          project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
+          identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
       - name: "CDN upload results"
         run: echo Uploaded file to CDN ${{ steps.upload.outputs.uploaded }}
       - name: Build and push docker image
