--- a/.env.sample
+++ b/.env.sample
@@ -1,15 +1,16 @@
-ENV=prod
-REACT_APP_MILJO=local
-REACT_APP_VERSION=local
-REACT_APP_URL=http://localhost:3000/person/personopplysninger
-REACT_APP_DINE_SAKER_URL=https://person.nav.no/mine-saker
-REACT_APP_PDL_URL=https://www.nav.no/person/pdl-fullmakt-ui
-REACT_APP_SKJERMING_URL=https://www.nav.no/person/personopplysninger/skjerming
-REACT_APP_API_URL=http://localhost:8080/person/personopplysninger-api
-REACT_APP_DSOP_URL=http://localhost:8081/person/dsop-api
-REACT_APP_UTBETALINGSOVERSIKT_URL=https://www.intern.dev.nav.no/utbetalingsoversikt
-REACT_APP_SYKEFRAVAER_URL=https://www.ekstern.dev.nav.no/syk/sykefravaer
-REACT_APP_LOGIN_URL=https://loginservice-q.nav.no/login
-REACT_APP_INNLOGGINGSSTATUS_URL=http://localhost:8095/innloggingsstatus/auth
-REACT_APP_DITT_NAV_URL=https://www.nav.no/minside
-REACT_APP_TELEMETRY_URL=http://localhost:12347/collect
+ENV=LOCAL
+NODE_ENV=local
+VITE_ENV=LOCAL
+VITE_BUILD_VERSION=LOCAL
+VITE_APP_URL=http://localhost:3000/person/personopplysninger
+VITE_DINE_SAKER_URL=https://person.nav.no/mine-saker
+VITE_PDL_URL=https://www.nav.no/person/pdl-fullmakt-ui
+VITE_SKJERMING_URL=https://www.nav.no/person/personopplysninger/skjerming
+VITE_API_URL=http://localhost:8080/person/personopplysninger-api
+VITE_DSOP_URL=http://localhost:8081/person/dsop-api
+VITE_UTBETALINGSOVERSIKT_URL=https://www.intern.dev.nav.no/utbetalingsoversikt
+VITE_SYKEFRAVAER_URL=https://www.ekstern.dev.nav.no/syk/sykefravaer
+VITE_LOGIN_URL=https://loginservice-q.nav.no/login
+VITE_INNLOGGINGSSTATUS_URL=http://localhost:8095/innloggingsstatus/auth
+VITE_DITT_NAV_URL=https://www.nav.no/minside
+VITE_TELEMETRY_URL=http://localhost:12347/collect
