--- a/.github/workflows/deploy.dev.yml
+++ b/.github/workflows/deploy.dev.yml
@@ -13,20 +13,20 @@ jobs:
       env: dev
       imageSuffix: dev-deploy
       appOrigin: "https://www.ansatt.dev.nav.no"
-      REACT_APP_VERSION: "dev-${{ github.sha }}"
-      REACT_APP_DINE_SAKER_URL: "https://www.intern.dev.nav.no/mine-saker"
-      REACT_APP_PDL_URL: "https://www.intern.dev.nav.no/person/pdl-fullmakt-ui"
-      REACT_APP_SKJERMING_URL: "https://skjerming-ui.intern.dev.nav.no/person/personopplysninger/skjerming"
-      REACT_APP_URL: "https://www.ansatt.dev.nav.no/person/personopplysninger"
-      REACT_APP_API_URL: "https://www.ansatt.dev.nav.no/person/personopplysninger-api"
-      REACT_APP_DSOP_URL: "https://www.ansatt.dev.nav.no/person/dsop-api"
-      REACT_APP_UTBETALINGSOVERSIKT_URL: "https://www.intern.dev.nav.no/utbetalingsoversikt/"
-      REACT_APP_SYKEFRAVAER_URL: "https://www.ekstern.dev.nav.no/syk/sykefravaer"
-      REACT_APP_LOGIN_URL: "https://login.ekstern.dev.nav.no/oauth2/login"
-      REACT_APP_DITT_NAV_URL: "https://www.intern.dev.nav.no/minside"
-      REACT_APP_PENSJONSOPPTJENING_URL: "https://www-q0.nav.no/pensjon/opptjening"
-      REACT_APP_INNLOGGINGSSTATUS_URL: "https://www.ekstern.dev.nav.no/person/nav-dekoratoren-api/auth"
-      REACT_APP_TELEMETRY_URL: "https://telemetry.ekstern.dev.nav.no/collect"
+      VITE_BUILD_VERSION: "dev-${{ github.sha }}"
+      VITE_DINE_SAKER_URL: "https://www.intern.dev.nav.no/mine-saker"
+      VITE_PDL_URL: "https://www.intern.dev.nav.no/person/pdl-fullmakt-ui"
+      VITE_SKJERMING_URL: "https://skjerming-ui.intern.dev.nav.no/person/personopplysninger/skjerming"
+      VITE_APP_URL: "https://www.ansatt.dev.nav.no/person/personopplysninger"
+      VITE_API_URL: "https://www.ansatt.dev.nav.no/person/personopplysninger-api"
+      VITE_DSOP_URL: "https://www.ansatt.dev.nav.no/person/dsop-api"
+      VITE_UTBETALINGSOVERSIKT_URL: "https://www.intern.dev.nav.no/utbetalingsoversikt/"
+      VITE_SYKEFRAVAER_URL: "https://www.ekstern.dev.nav.no/syk/sykefravaer"
+      VITE_LOGIN_URL: "https://login.ekstern.dev.nav.no/oauth2/login"
+      VITE_DITT_NAV_URL: "https://www.intern.dev.nav.no/minside"
+      VITE_PENSJONSOPPTJENING_URL: "https://www-q0.nav.no/pensjon/opptjening"
+      VITE_INNLOGGINGSSTATUS_URL: "https://www.ekstern.dev.nav.no/person/nav-dekoratoren-api/auth"
+      VITE_TELEMETRY_URL: "https://telemetry.ekstern.dev.nav.no/collect"
     secrets:
       READER_TOKEN: ${{ secrets.READER_TOKEN }}
       NAIS_WORKLOAD_IDENTITY_PROVIDER: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
