--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -15,20 +15,20 @@ jobs:
       env: prod
       imageSuffix: release-${{ github.ref_name }}
       appOrigin: "https://www.nav.no"
-      REACT_APP_VERSION: ${{ github.event.release.tag_name }}
-      REACT_APP_DINE_SAKER_URL: "https://person.nav.no/mine-saker"
-      REACT_APP_PDL_URL: "https://www.nav.no/person/pdl-fullmakt-ui"
-      REACT_APP_SKJERMING_URL: "https://www.nav.no/person/personopplysninger/skjerming"
-      REACT_APP_URL: "https://www.nav.no/person/personopplysninger"
-      REACT_APP_API_URL: "https://www.nav.no/person/personopplysninger-api"
-      REACT_APP_DSOP_URL: "https://www.nav.no/person/dsop-api"
-      REACT_APP_UTBETALINGSOVERSIKT_URL: "https://tjenester.nav.no/utbetalingsoversikt"
-      REACT_APP_SYKEFRAVAER_URL: "https://www.nav.no/syk/sykefravaer"
-      REACT_APP_LOGIN_URL: "https://login.nav.no/oauth2/login"
-      REACT_APP_DITT_NAV_URL: "https://www.nav.no/minside"
-      REACT_APP_PENSJONSOPPTJENING_URL: "https://www.nav.no/pensjon/opptjening"
-      REACT_APP_INNLOGGINGSSTATUS_URL: "https://www.nav.no/person/nav-dekoratoren-api/auth"
-      REACT_APP_TELEMETRY_URL: "https://telemetry.nav.no/collect"
+      VITE_BUILD_VERSION: ${{ github.event.release.tag_name }}
+      VITE_DINE_SAKER_URL: "https://person.nav.no/mine-saker"
+      VITE_PDL_URL: "https://www.nav.no/person/pdl-fullmakt-ui"
+      VITE_SKJERMING_URL: "https://www.nav.no/person/personopplysninger/skjerming"
+      VITE_APP_URL: "https://www.nav.no/person/personopplysninger"
+      VITE_API_URL: "https://www.nav.no/person/personopplysninger-api"
+      VITE_DSOP_URL: "https://www.nav.no/person/dsop-api"
+      VITE_UTBETALINGSOVERSIKT_URL: "https://tjenester.nav.no/utbetalingsoversikt"
+      VITE_SYKEFRAVAER_URL: "https://www.nav.no/syk/sykefravaer"
+      VITE_LOGIN_URL: "https://login.nav.no/oauth2/login"
+      VITE_DITT_NAV_URL: "https://www.nav.no/minside"
+      VITE_PENSJONSOPPTJENING_URL: "https://www.nav.no/pensjon/opptjening"
+      VITE_INNLOGGINGSSTATUS_URL: "https://www.nav.no/person/nav-dekoratoren-api/auth"
+      VITE_TELEMETRY_URL: "https://telemetry.nav.no/collect"
     secrets:
       READER_TOKEN: ${{ secrets.READER_TOKEN }}
       NAIS_WORKLOAD_IDENTITY_PROVIDER: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
