Fikser feil include i tsconfig.node.json

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,10 +1,12 @@
 {
     "compilerOptions": {
+        "jsx": "react-jsx",
         "composite": true,
         "skipLibCheck": true,
         "module": "ESNext",
         "moduleResolution": "bundler",
         "allowSyntheticDefaultImports": true
     },
-    "include": ["./vite.config.js"]
+    "include": ["./vite.config.js", "./src/**/*"],
+    "exclude": ["node_modules"]
 }
