Fjerner unødvendig tsconfig.node.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,7 @@
         "paths": {
             "@/*": ["./src/*"]
         },
-        "types": ["vite/client"]
+        "types": ["vite/client", "vitest/globals", "@testing-library/jest-dom"]
     },
-    "include": ["src"],
-    "references": [{ "path": "./tsconfig.node.json" }]
+    "include": ["src"]
 }
