Legger til håndtering av CDN via base

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,6 @@
-ENV=LOCAL
 NODE_ENV=local
-VITE_ENV=LOCAL
-VITE_BUILD_VERSION=LOCAL
+VITE_ENV=local
+VITE_BUILD_VERSION=localbuild
 VITE_APP_URL=http://localhost:3000/person/personopplysninger
 VITE_DINE_SAKER_URL=https://person.nav.no/mine-saker
 VITE_PDL_URL=https://www.nav.no/person/pdl-fullmakt-ui
