--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
     "private": true,
     "author": "NAV",
     "license": "MIT",
+    "type": "module",
     "scripts": {
-        "start": "node server.js"
+        "build": "tsc --build ./tsconfig.json --verbose"
     },
     "dependencies": {
         "@navikt/nav-dekoratoren-moduler": "2.1.6",
@@ -17,12 +18,16 @@
         "mustache-express": "1.3.2",
         "node-cache": "5.1.2",
         "node-fetch": "3.3.2",
-        "react": "18.3.1",
-        "winston": "3.13.1"
+        "pino": "9.3.2",
+        "react": "18.3.1"
     },
     "browserslist": [
         ">0.2% and last 2 versions",
         "not dead",
         "not op_mini all"
-    ]
+    ],
+    "devDependencies": {
+        "@types/compression": "^1.7.5",
+        "@types/express": "^4.17.21"
+    }
 }
