Oppgraderer til endelig versjon av nav-office-reception-info

--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
         "@grafana/faro-web-sdk": "1.10.1",
         "@grafana/faro-web-tracing": "1.10.1",
         "@navikt/aksel-icons": "7.1.0",
-        "@navikt/arbeidsforhold": "4.0.2-beta.0",
+        "@navikt/arbeidsforhold": "4.1.0",
         "@navikt/ds-css": "7.1.0",
         "@navikt/ds-react": "7.1.0",
         "@navikt/fnrvalidator": "2.1.2",
         "@navikt/nav-dekoratoren-moduler": "3.1.0",
-        "@navikt/nav-office-reception-info": "1.0.8-beta.0",
+        "@navikt/nav-office-reception-info": "1.1.0",
         "@react-pdf/renderer": "3.4.4",
         "buffer": "6.0.3",
         "core-js": "3.38.1",
