Endret lenke til dokumentarkivet fra Flere opplysninger om deg

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
 VITE_ENV=local
 VITE_BUILD_VERSION=localbuild
 VITE_APP_URL=http://localhost:3000/person/personopplysninger
-VITE_DINE_SAKER_URL=https://person.nav.no/mine-saker
+VITE_DINE_SAKER_URL=https://www.nav.no/dokumentarkiv
 VITE_PDL_URL=https://www.nav.no/person/pdl-fullmakt-ui
 VITE_SKJERMING_URL=https://www.nav.no/person/personopplysninger/skjerming
 VITE_API_URL=http://localhost:8080/person/personopplysninger-api
